force-app/main/default/objects/C_Page__c/C_Page__c.object-meta.xml
<CustomObject>
    <description>Page within a form - breaks the form into navigable steps</description>
    <label>Page</label>
    <nameField>
        <label>Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>