force-app/main/default/objects/C_Page__c/fields/C_Category__c.field-meta.xml
<CustomField>
    <fullName>C_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>C_Category__c</referenceTo>
    <relationshipLabel>Pages</relationshipLabel>
    <relationshipName>C_Pages</relationshipName>
    <type>Lookup</type>
</CustomField>