force-app/main/default/objects/C_Page__c/fields/C_Description__c.field-meta.xml
<CustomField>
    <fullName>C_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>