force-app/main/default/objects/C_Page__c/fields/C_Form__c.field-meta.xml
<CustomField>
    <fullName>C_Form__c</fullName>
    <label>Form</label>
    <referenceTo>C_Form__c</referenceTo>
    <relationshipLabel>Pages</relationshipLabel>
    <relationshipName>C_Pages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>