force-app/main/default/objects/C_Page__c/listViews/All_Pages.listView-meta.xml
<ListView>
    <fullName>All_Pages</fullName>
    <columns>NAME</columns>
    <columns>C_Form__c</columns>
    <columns>C_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Pages</label>
</ListView>